Api to update user password
